# img.ly

./: CMakeLists.txt  README.md  main.cpp
engine/: Handler.cpp  Handler.h  Pipeline.cpp  Pipeline.h  Request.cpp  Request.h  Result.cpp  Result.h  SwitchHandler.cpp  SwitchHandler.h
handlers/: BundleParser.cpp  BundleParser.h  FileParser.cpp  FileParser.h  HttpParser.cpp  HttpParser.h  ImageDecoder.cpp  ImageDecoder.h  JsonParser.cpp  JsonParser.h  ZipDecompressor.cpp  ZipDecompressor.h
